--- a/docs/reference/env-configuration.mdx
+++ b/docs/reference/env-configuration.mdx
@@ -217,6 +217,13 @@ is also being used and set to `True`. **Never disable this if OAUTH/SSO is not b
 - Description: Sets the default group ID to assign to new users upon registration.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `DEFAULT_GROUP_SHARE_PERMISSION`
+
+- Type: `str`
+- Options: `members`, `true`, `false`
+- Default: `members`
+- Description: Controls the default "Who can share to this group" setting for newly created groups. `members` means only group members can share to the group, `true` means anyone can share, and `false` means no one can share to the group. This applies both to groups created manually and groups created automatically (e.g. via SCIM or OAuth group sync). Existing groups are not affected — this only sets the initial default for new groups.
+
 #### `PENDING_USER_OVERLAY_TITLE`
 
 - Type: `str`
@@ -5215,6 +5222,12 @@ This is useful when you need a JWT access token for downstream validation or whe
 - Description: Enables or disables user permission to upload files to chats.
 - Persistence: This environment variable is a `PersistentConfig` variable.
 
+#### `USER_PERMISSIONS_CHAT_WEB_UPLOAD`
+
+- Type: `bool`
+- Default: `True`
+- Description: Enables or disables user permission to attach web pages (URLs) in chats via the "Attach Webpage" option. When set to `False`, the "Attach Webpage" button is hidden for non-admin users. Also configurable per-group in **Admin Panel → Users → Groups → Permissions → Chat Permissions → Allow Web Upload**.
+
 #### `USER_PERMISSIONS_CHAT_DELETE`
 
 - Type: `bool`
@@ -5498,6 +5511,14 @@ These settings control whether users can share workspace items **publicly**.
 - Default: `True`
 - Description: Enables or disables **public sharing** of notes.
 - Persistence: This environment variable is a `PersistentConfig` variable.
+
+### Access Grants
+
+#### `USER_PERMISSIONS_ACCESS_GRANTS_ALLOW_USERS`
+
+- Type: `bool`
+- Default: `True`
+- Description: Controls whether non-admin users can share resources (knowledge bases, models, prompts, notes, skills, and tools) with **specific individual users**. When set to `False`, individual user grants are silently stripped from access grant lists — group sharing and public sharing remain unaffected. Admins always retain the ability to share with individual users regardless of this setting. Also configurable per-group in **Admin Panel → Users → Groups → Permissions → Access Grants → Allow Sharing With Users**.
 
 ### Import / Export
 
